--- a/VoiceTimer/Resources/AppResources.resx
+++ b/VoiceTimer/Resources/AppResources.resx
@@ -281,7 +281,7 @@ Showing us some love on the store helps us to continue to work on the app and ma
     <comment>InfoPage</comment>
   </data>
   <data name="Commands2Bullet2" xml:space="preserve">
-    <value>- " ...cancel nap. "</value>
+    <value>- " ...cancel. "</value>
     <comment>InfoPage</comment>
   </data>
   <data name="Commands2Bullet3" xml:space="preserve">
