Changed voice command to "Timer"

--- a/VoiceTimer/Resources/AppResources.de-DE.resx
+++ b/VoiceTimer/Resources/AppResources.de-DE.resx
@@ -150,7 +150,7 @@
     <comment>General</comment>
   </data>
   <data name="ApplicationVersion" xml:space="preserve">
-    <value>1.4</value>
+    <value>1.5</value>
     <comment>General</comment>
   </data>
   <data name="Commands1Message" xml:space="preserve">
@@ -198,7 +198,7 @@
     <comment>InfoPage</comment>
   </data>
   <data name="Commands2Message2" xml:space="preserve">
-    <value> "Voice Timer..."  </value>
+    <value> "Timer..."  </value>
     <comment>InfoPage</comment>
   </data>
   <data name="Commands2Message3" xml:space="preserve">
